# personal-ai

./: .gitignore  Cargo.toml  alembic.ini  bun.lockb  components.json  main.py  package.json  pyproject.toml  vite.config.ts
backend/: app.py  config.py
backend/models/: __init__.py  projects.py
backend/routers/: __init__.py  project_router.py
core/ai-service/: Cargo.toml
core/ai-service/src/: main.rs
core/db-service/: Cargo.toml
core/db-service/entity/: Cargo.toml
core/db-service/entity/src/: lib.rs
core/db-service/entity/src/entity/: prelude.rs  project.rs
core/db-service/migration/: Cargo.toml
core/db-service/migration/src/: lib.rs  m20250102_084315_create_project_table.rs
core/db-service/src/: lib.rs
core/db-service/src/model/: project.rs
core/db-service/src/services/: mod.rs  project_service.rs
frontend/: bun.lockb  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/components/: ChatStartInterface.tsx  CreateProjectButton.tsx  ProjectList.tsx  ProjectSettings.tsx  QuickStats.tsx  SearchBar.tsx
frontend/src/app/pages/dashboard/: layout.tsx  page.tsx
frontend/src/app/pages/dashboard/project/view/: page.tsx
frontend/src/context/project/: create.ts
frontend/src/lib/: react-query.ts
migrations/: env.py
src/: App.tsx  main.tsx  providers.tsx
src-tauri/: Cargo.toml  settings.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/config/: app_config.rs
src-tauri/src/handlers/: project_handler.rs
src/app/components/: AppSideBar.tsx  ChatAppUI.tsx  ChatInterface.tsx  CreateProjectButton.tsx  Header.tsx  ProjectList.tsx  ProjectSettings.tsx  markdown-panel.tsx
src/app/pages/: dashboard.tsx
src/app/pages/dashboard/project/: layout.tsx
src/app/pages/dashboard/project/create/: page.tsx
src/app/pages/dashboard/project/view/: page.tsx
src/context/project/: create.ts
src/routes/: AppRoutes.tsx
src/types/: model.ts  panel.ts
