[workspace]
members = [
    "core/ai-service",
    "core/db-service",
    "core/db-service/migration",
    "core/db-service/entity",
    "src-tauri"
]
resolver = "2"

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"
