[tool.poetry]
name = "agent-dashboard-app"
version = "0.1.0"
description = ""
authors = ["dewma <dewmal@syigen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pycparser = "^2.22"
pythonnet = "^3.0.5"
pywebview = "^5.3.2"
fastapi = "^0.115.6"
robyn = "^0.64.2"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
