[package]
name = "db-service"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.3", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
log = "0.4.22"
tokio = { version = "1.42.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full", "test-util"] }


